--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "serve": "vue-cli-service serve --mode development",
+    "build": "vue-cli-service build --mode production"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "core-js": "^2.6.5",
+    "element-ui": "^2.15.9",
+    "jquery": "^3.6.0",
     "vue": "^2.6.10",
+    "vue-json-viewer": "^2.2.22",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
